# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires         = ['setuptools >= 62.2.0', 'wheel', 'argparse-manpage[setuptools]', 'tomli >= 1.1.0 ; python_version < "3.11"']
build-backend    = 'setuptools.build_meta'

[project]
name             = 'bidscoin'
description      = 'Converts and organises raw MRI data-sets according to the Brain Imaging Data Structure (BIDS)'
version          = '4.1.1'
readme           = 'README.rst'
requires-python  = '>= 3.8'
license          = {file = 'LICENSE.txt'}
keywords         = ['bids','mri','imaging','neuroimaging','dicom','par','rec','nifti','defacing','echo-combination','skull-stripping']
authors          = [{email = 'm.zwiers@donders.ru.nl'}, {name = 'Marcel Zwiers'}]
classifiers      = ['Programming Language :: Python :: 3',
                    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
                    'Operating System :: OS Independent',
                    'Intended Audience :: Science/Research']
dependencies     = ['pandas',
                    'matplotlib',
                    'numpy',
                    'pydicom >= 2',
                    'PyQt6',
                    'ruamel-yaml >= 0.15.35',
                    'tomli >= 1.1.0 ; python_version < "3.11"',
                    'coloredlogs',
                    'tqdm >= 4.60.0',
                    'multiecho >= 0.25',
                    'python-dateutil',
                    'nibabel',
                    'bids-validator']

[project.optional-dependencies]
dcm2niix2bids    = ['dcm2niix']
spec2nii2bids    = ['spec2nii >= 0.6.1']
deface           = ['pydeface', 'drmaa']
pet2bids         = ['pypet2bids >= 1.0.12']
# phys2bidscoin    = ['bioread >= 1.0.5', 'pymatreader >= 0.0.24', 'duecredit', 'phys2bids >= 2.0.0, < 3.0.0']
all              = ['bidscoin[dcm2niix2bids,spec2nii2bids,deface,pet2bids]']    # + phys2bidscoin
dev              = ['bidscoin[spec2nii2bids,deface,pet2bids]', 'tox', 'pytest'] # + phys2bidscoin

[project.urls]
documentation    = 'https://bidscoin.readthedocs.io'
homepage         = 'https://github.com/Donders-Institute/bidscoin'
repository       = 'https://github.com/Donders-Institute/bidscoin'

[project.scripts]
bidscoin         = 'bidscoin.bcoin:main'
bidseditor       = 'bidscoin.bidseditor:main'
bidsmapper       = 'bidscoin.bidsmapper:main'
bidscoiner       = 'bidscoin.bidscoiner:main'
echocombine      = 'bidscoin.bidsapps.echocombine:main'
deface           = 'bidscoin.bidsapps.deface:main'
medeface         = 'bidscoin.bidsapps.medeface:main'
skullstrip       = 'bidscoin.bidsapps.skullstrip:main'
slicereport      = 'bidscoin.bidsapps.slicereport:main'
dicomsort        = 'bidscoin.utilities.dicomsort:main'
bidsparticipants = 'bidscoin.utilities.bidsparticipants:main'
rawmapper        = 'bidscoin.utilities.rawmapper:main'
physio2tsv       = 'bidscoin.utilities.physio2tsv:main'
plotphysio       = 'bidscoin.utilities.plotphysio:main'

[tool.build_manpages]
manpages         = ['man/bidscoin.1:function=get_parser:pyfile=bidscoin/cli/_bcoin.py',
                    'man/bidseditor.1:function=get_parser:pyfile=bidscoin/cli/_bidseditor.py',
                    'man/bidsmapper.1:function=get_parser:pyfile=bidscoin/cli/_bidsmapper.py',
                    'man/bidscoiner.1:function=get_parser:pyfile=bidscoin/cli/_bidscoiner.py',
                    'man/echocombine.1:function=get_parser:pyfile=bidscoin/cli/_echocombine.py',
                    'man/deface.1:function=get_parser:pyfile=bidscoin/cli/_deface.py',
                    'man/medeface.1:function=get_parser:pyfile=bidscoin/cli/_medeface.py',
                    'man/skullstrip.1:function=get_parser:pyfile=bidscoin/cli/_skullstrip.py',
                    'man/slicereport.1:function=get_parser:pyfile=bidscoin/cli/_slicereport.py',
                    'man/dicomsort.1:function=get_parser:pyfile=bidscoin/cli/_dicomsort.py',
                    'man/bidsparticipants.1:function=get_parser:pyfile=bidscoin/cli/_bidsparticipants.py',
                    'man/rawmapper.1:function=get_parser:pyfile=bidscoin/cli/_rawmapper.py',
                    'man/physio2tsv.1:function=get_parser:pyfile=bidscoin/cli/_physio2tsv.py',
                    'man/plotphysio.1:function=get_parser:pyfile=bidscoin/cli/_plotphysio.py']

[tool.setuptools.cmdclass]
build_py         = "build_manpages.build_py"
install          = "build_manpages.install"
build_manpages   = "build_manpages.build_manpages"

[tool.setuptools.package-data]
'*'              = ['*.yaml', 'BIDS_VERSION', 'bidscoin.ico', 'bidscoin_logo.png', 'rightarrow.png']       #  package names should match these glob patterns (["*"] by default)

[tool.pytest.ini_options]
testpaths        = ['tests']
